=== 1.0.1 (2014-08-19)

* Display BigDecimal values in float format on browse/search pages (jeremyevans)

* Work on roda with all template frameworks, not just erb (jeremyevans)

=== 1.0.0 (2014-07-30)

* Assume :sequel model type (jeremyevans)

* Work without indifferent params (jeremyevans)

* Add support for roda web framework (jeremyevans)

=== 0.5.5 (2014-04-10)

* Make Models::Sequel#mtm_update compatible with Sequel 4.10+ (jeremyevans)

* Display boolean column false values in the search/browse tables (jeremyevans)

=== 0.5.4 (2014-01-06)

* Qualify associated foreign key columns when searching, fixing issues when eager_graph is used on the model (jeremyevans)

=== 0.5.3 (2014-01-02)

* Fix searching by associated object that uses autocompleting (jeremyevans)

* Fix autocompletion of associated objecs on new form (jeremyevans)

* Remove extra slash in URL when autocompleting (jeremyevans)

=== 0.5.2 (2013-12-18)

* Use default empty option when picking a many to many association to edit (jeremyevans)

* Don't force user to pick many to many association to edit if only one choice is available (jeremyevans)

* Don't show many to many edit link for models without many to many associations (jeremyevans)

* Quailfy columns when searching, fixing issues when eager_graph is used on the model (jeremyevans)

=== 0.5.1 (2013-12-17)

* Show header with display name for current object on mtm edit page (jeremyevans)

* Handle empty values for many_to_one associations on new/edit forms (jeremyevans)

=== 0.5.0 (2013-12-13)

* Initial Public Release