@@ -1,3 +1,7 @@
+=== HEAD
+
+* Make sure the display name for an object always returns a string (jeremyevans)
+
 === 1.0.1 (2014-08-19)
 
 * Display BigDecimal values in float format on browse/search pages (jeremyevans)
